# thesis-llm-forensics

./: .env.example  .gitignore  README.md  docker-compose.yml
campaigns/: README.md
tools/forensic/: README.md  pyproject.toml
tools/forensic/forensic/: __init__.py  adaptive_attack.py  application.py  attribution.py  b7_operating_point.py  backends.py  backends_transformers.py  campaign.py  campaign_runner.py  canary_dataset.py  cli.py  corpus.py  countermeasures.py  defenses.py  detector_adaptive.py  detector_adaptive_rag.py  detector_ml.py  detector_store.py  detector_v2.py  detector_v5.py  evaluation.py  features.py  finetune.py  harvest.py  hashing.py  indexer.py  investigation.py  logger.py  manifest.py  metrics.py  mia_pile.py  mia_pile_runner.py  mia_score.py  mia_score_runner.py  mia_strata.py  online_detector.py  pile_detector.py  pipeline.py  playbook.py  popularity_rag.py  (+17 more)
tools/forensic/runners/: build_detector_instances_real.py  build_rag_corpus.py  run_adaptive_canary_real.py  run_attack_canary_target_real.py  run_b7_reanalysis_targetA.py  run_b7_reanalysis_targetB.py  run_b7_reanalysis_targetC.py  run_b7_v5_rag.py  run_backdoor_rag_real.py  run_combined_rag_detection_real.py  run_detector_generalization_real.py  run_finetune_canary_target_real.py  run_forensic_investigation_real.py  run_forensic_report.py  run_integrated_pipeline_real.py  run_mia_blackbox_canary_real.py  run_mia_comparison_canary_real.py  run_popularity_rag_real.py  run_promptinject_rag_real.py  run_rag_e0_e1_real.py  run_rag_realistic_env_real.py  run_retrieval_targeting_rag_real.py  (+3 more)
(+130 files in other folders)
