[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forensic"
version = "0.1.0"
description = "Tier-1 forensic logging, evidence indexing and chain verification for the LLM MIA/Secret-Extraction thesis"
requires-python = ">=3.10"
authors = [{ name = "Davide M.D." }]
license = { text = "Academic use — Politecnico di Torino MSc thesis" }
dependencies = []

[project.scripts]
forensic = "forensic.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forensic*"]
